# Sentinel

./: .gitignore  LICENSE  README.md  build.gradle.kts  gradle.properties  settings.gradle.kts
.github/workflows/: release.yml
app/: build.gradle.kts
build-logic/: build.gradle.kts  settings.gradle
core/: build.gradle.kts
gradle/: libs.versions.toml
gradle/wrapper/: gradle-wrapper.properties
kit/: build.gradle.kts
kit/debug/: build.gradle.kts
kit/emulator/: build.gradle.kts
kit/hook/: build.gradle.kts
kit/hook/src/main/cpp/: CMakeLists.txt  sentinel-hook.cpp
kit/location/: build.gradle.kts
kit/root/: build.gradle.kts
kit/root/src/main/cpp/: CMakeLists.txt  sentinel-root.cpp
kit/tamper/: build.gradle.kts
kit/tamper/src/main/cpp/: CMakeLists.txt  sentinel-tamper.cpp
sample/android/: build.gradle.kts
sentinel/: build.gradle.kts  consumer-proguard-rules.pro  gradle.properties
sentinel-core/: build.gradle.kts  gradle.properties
sentinel-core/api/: sentinel-core.klib.api
sentinel-identity/: build.gradle.kts  gradle.properties
sentinel-identity/api/: sentinel-identity.klib.api
sentinel-kit/detector/: build.gradle.kts  gradle.properties
sentinel-kit/kni/: gradle.properties
sentinel-kit/ndk/: build.gradle.kts  gradle.properties
sentinel-monitor/: gradle.properties
sentinel-monitor/api/: sentinel-monitor.klib.api
sentinel-runtime/: gradle.properties
sentinel-runtime/api/: sentinel-runtime.klib.api
sentinel-ui/: build.gradle.kts  consumer-proguard-rules.pro  gradle.properties
ui/: build.gradle.kts
(+187 files in other folders)
